--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
-  <title>Сергій Коржов — Клінічний психолог, КПТ</title>
+  <title>Сергій Коржов — Клінічний психолог, КПТ | Тривога Депресія ПТСР</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,600;1,300;1,400&family=DM+Sans:wght@300;400;500&display=swap" rel="stylesheet" />
@@ -31,6 +31,8 @@
       background: var(--warm-white);
       color: var(--charcoal);
       cursor: none;
+      overflow-x: hidden;
+      max-width: 100vw;
       overflow-x: hidden;
     }
 
@@ -593,29 +595,44 @@
 }
 
     /* MOBILE */
-    @media (max-width: 900px) {
-      nav { padding: 1.2rem 1.5rem; }
-      .nav-links { display: none; }
-      .hero { grid-template-columns: 1fr; padding: 7rem 1.5rem 3rem; gap: 3rem; }
-      .hero-visual { justify-content: center; }
-      section { padding: 4rem 1.5rem; }
-      .about-inner,
-      .contact-inner { grid-template-columns: 1fr; gap: 3rem; }
-      .about-aside { position: static; }
-      .steps { grid-template-columns: 1fr; }
-      footer { flex-direction: column; gap: 1rem; padding: 2rem 1.5rem; text-align: center; }
-        .hero-badge {
-    position: static;
-    margin-top: 1rem;
-    align-self: flex-start;
-    margin-left: 1rem;
-  }
+@media (max-width: 900px) {
+  nav { padding: 1.2rem 1.5rem; }
+  .nav-links { display: none; }
 
+  .hero {
+    grid-template-columns: 1fr;
+    padding: 7rem 1.5rem 3rem;
+    gap: 3rem;
+  }
+  .hero-text { max-width: 100%; }
   .hero-visual {
+    justify-content: center;
     flex-direction: column;
     align-items: center;
   }
-    }
+  .hero-photo-wrap {
+    width: 80vw;
+    max-width: 340px;
+  }
+  .hero-badge {
+    position: static;
+    margin-top: 1rem;
+    align-self: flex-start;
+  }
+
+  section { padding: 4rem 1.5rem; }
+  .about-inner,
+  .contact-inner { grid-template-columns: 1fr; gap: 3rem; }
+  .about-aside { position: static; }
+  .steps { grid-template-columns: 1fr; }
+  footer {
+    flex-direction: column;
+    gap: 1rem;
+    padding: 2rem 1.5rem;
+    text-align: center;
+  }
+}
+    
   </style>
 </head>
 <body>
